--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nuxt/ui": "^4.4.0",
     "@orpc/client": "^1.13.5",
     "@orpc/server": "^1.13.5",
+    "@orpc/vue-colada": "^1.13.5",
     "@pinia/colada-nuxt": "0.3.1",
     "@pinia/nuxt": "0.11.3",
     "@prisma/adapter-better-sqlite3": "^7.4.0",
